Refatora acesso à API ViaCEP de RestTemplate para RestClient
Atualiza o projeto para utilizar RestClient no acesso à API ViaCEP, substituindo o uso anterior do RestTemplate. Essa mudança melhora a eficiência e facilita a manutenção do código.